--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -2,7 +2,7 @@ page-home {
 
 }
 ion-content{
-background-image: url(../../assets/imgs/bgWood.jpg)
+background-image: url(../../assets/imgs/bg.jpg)
 
 
 }
