--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -34,11 +34,11 @@ $app-direction: ltr;
 // The "primary" color is the only required color in the map.
 
 $colors: (
-  primary:    #7B46FF,
-  secondary:  #B8AAFF,
-  danger:     #f53d3d,
-  light:      #f4f4f4,
-  dark:       #222
+  primary:    #E86152,
+  secondary:  #D7524C,
+  danger:     #F0DC98,
+  light:      #FFFFFF,
+  dark:       #D7524C,
 );
 
 
