--- a/src/app/app.html
+++ b/src/app/app.html
@@ -6,8 +6,10 @@
   </ion-header>
 
   <ion-content class="navMenu">
-    <ion-list>
+    <ion-list> 
+      
       <button  menuClose ion-item *ngFor="let p of pages" (click)="openPage(p)">
+          <ion-icon name="pizza"> </ion-icon>
         {{p.title}}
       </button>
     </ion-list>
